--- a/force-app/main/default/classes/LeaveRequestApexControllerTest.cls
+++ b/force-app/main/default/classes/LeaveRequestApexControllerTest.cls
@@ -28,6 +28,9 @@ public class LeaveRequestApexControllerTest {
             EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
             EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
             EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);
+            EMS_LM_Leave__c paidtimeof = TestDataFactory.createLeaveType('Paid time off',true);
+            Office_Location__c officlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+            Office_Location__c officlocRec2 =TestDataFactory.createOfficeLocation('California - USA',true);
             
             acc = TestDataFactory.createAccount(true);
             
