--- a/force-app/main/default/classes/editTimeshhetwhenRejectedTest.cls
+++ b/force-app/main/default/classes/editTimeshhetwhenRejectedTest.cls
@@ -16,6 +16,8 @@ public class editTimeshhetwhenRejectedTest {
           EMS_LM_Leave__c paidtimeof = TestDataFactory.createLeaveType('Paid time off',true);
                EMS_LM_Leave__c unpaidTimeOff = TestDataFactory.createLeaveType('UnPaid time off',true);
                EMS_LM_Leave__c floatingholiday = TestDataFactory.createLeaveType('Floating Holiday',true);
+        Office_Location__c officlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+        Office_Location__c officlocRec2 =TestDataFactory.createOfficeLocation('California - USA',true);
         Account acc = TestDataFactory.createAccount(true);
         Contact con=  TestDataFactory.createResourceContact(acc.id, false);
         con.EMS_RM_Employee_Id__c = 'CP10235';
@@ -36,6 +38,7 @@ public class editTimeshhetwhenRejectedTest {
         projectRec.Project_Manager__c = con.Id;
         projectRec.Type_Of_Project__c ='Client Projects';
         projectRec.Approval_Needed__c ='Yes';
+        projectRec.Offshore_Project_Manager__c=con.Id;
         INSERT projectRec;        
         System.debug('ProjectREC'+projectRec);
         EMS_TM_Assignment__c assignmentRec = new EMS_TM_Assignment__c();
@@ -43,6 +46,8 @@ public class editTimeshhetwhenRejectedTest {
         assignmentRec.EMS_TM_ProjectName_Asgn__c = projectRec.Id;
         assignmentRec.EMS_TM_StartDate_Asgn__c = system.today();
         assignmentRec.EMS_TM_Billable__c = true;
+        assignmentRec.Project_Allocation__c=2;
+        assignmentRec.EMS_TM_AssignedAs__c='Administrator';
         INSERT assignmentRec;  
         EMS_Timesheet__c timesheetRec = new EMS_Timesheet__c();
         timesheetRec.Week_Start_Date__c = System.today();
@@ -60,8 +65,9 @@ public class editTimeshhetwhenRejectedTest {
         EMS_TM_Timesheet_Record__c lineitem = new EMS_TM_Timesheet_Record__c();
         lineitem.EMS_Timesheet__c = timesheetRec.Id;
         lineitem.OwnerId = timesheetRec.User__c;
+        lineitem.Assignment__c=assignmentRec.Id;
       //  lineitem.Assignment__c = assignmentRec.Id;
-       // lineitem.EMS_TM_Project__c = assignmentRec.EMS_TM_ProjectName_Asgn__c;
+       lineitem.EMS_TM_Project__c = assignmentRec.EMS_TM_ProjectName_Asgn__c;
         lineitem.EMS_TM_Mon__c = 0;
         lineitem.EMS_TM_Wed__c = 0;
         lineitem.EMS_TM_Tue__c = 0;
