--- a/force-app/main/default/classes/restrictSameSpouseFatherMotherTest.cls
+++ b/force-app/main/default/classes/restrictSameSpouseFatherMotherTest.cls
@@ -14,6 +14,9 @@ public class restrictSameSpouseFatherMotherTest {
                EMS_LM_Leave__c unpaidTimeOff = TestDataFactory.createLeaveType('UnPaid time off',true);
                EMS_LM_Leave__c floatingholiday = TestDataFactory.createLeaveType('Floating Holiday',true);
             
+            Office_Location__c officlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+            Office_Location__c officlocRec2 =TestDataFactory.createOfficeLocation('California - USA',true);
+            
             Account acc = TestDataFactory.createAccount(true);
             
             Contact con=  TestDataFactory.createResourceContact(acc.id, false);
