--- a/force-app/main/default/classes/GetDataForLoginUserTest.cls
+++ b/force-app/main/default/classes/GetDataForLoginUserTest.cls
@@ -16,6 +16,8 @@ public class GetDataForLoginUserTest {
             EMS_LM_Leave__c paidtimeof = TestDataFactory.createLeaveType('Paid time off',true);
                EMS_LM_Leave__c unpaidTimeOff = TestDataFactory.createLeaveType('UnPaid time off',true);
                EMS_LM_Leave__c floatingholiday = TestDataFactory.createLeaveType('Floating Holiday',true);
+            Office_Location__c officlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+            Office_Location__c officlocRec2 =TestDataFactory.createOfficeLocation('California - USA',true);
             acc=TestDataFactory.createAccount(True);
             con=TestDataFactory.createResourceContact(acc.Id,false);
             con.EMS_Phone_Number__c='1234567890';
