--- a/force-app/main/default/classes/LeaveRequestHRApproveHandlerTest.cls
+++ b/force-app/main/default/classes/LeaveRequestHRApproveHandlerTest.cls
@@ -24,6 +24,9 @@ public class LeaveRequestHRApproveHandlerTest {
                EMS_LM_Leave__c unpaidTimeOff = TestDataFactory.createLeaveType('UnPaid time off',true);
                EMS_LM_Leave__c floatingholiday = TestDataFactory.createLeaveType('Floating Holiday',true);
             
+            Office_Location__c officlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+            Office_Location__c officlocRec2 =TestDataFactory.createOfficeLocation('California - USA',true);
+            
             acc = TestDataFactory.createAccount(true);
             
             con=TestDataFactory.createResourceContact(acc.id, false);
