--- a/force-app/main/default/classes/Testclass_ResourceriseToHR.cls
+++ b/force-app/main/default/classes/Testclass_ResourceriseToHR.cls
@@ -6,6 +6,11 @@ public class Testclass_ResourceriseToHR {
             EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
             EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
             EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);
+        EMS_LM_Leave__c paidtimeof = TestDataFactory.createLeaveType('Paid time off',true);
+               EMS_LM_Leave__c unpaidTimeOff = TestDataFactory.createLeaveType('UnPaid time off',true);
+               EMS_LM_Leave__c floatingholiday = TestDataFactory.createLeaveType('Floating Holiday',true);
+        Office_Location__c hydofficlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+Office_Location__c usofficlocRec =TestDataFactory.createOfficeLocation('California - USA',true);
         contact con=TestDataFactory.createResourceContact(True);
         list<Resource_Request__c> resourcelist=new list<Resource_Request__c>();
       Resource_Role__c role=  TestDataFactory.createResourceRole('Salesforce develpoer',True);
