--- a/force-app/main/default/classes/updateTheEmergenyOnlyForOneTest.cls
+++ b/force-app/main/default/classes/updateTheEmergenyOnlyForOneTest.cls
@@ -4,6 +4,8 @@ public class updateTheEmergenyOnlyForOneTest {
         user adminuser = TestDataFactory.createAdminUser(true);
         
         system.runAs(adminuser){
+            Office_Location__c hydofficlocRec =TestDataFactory.createOfficeLocation('Hyderabad - India',true);
+            Office_Location__c usofficlocRec =TestDataFactory.createOfficeLocation('California - USA',true);
             Resource_Role__c role = TestDataFactory.createResourceRole(true);
             EMS_LM_Leave__c annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
             EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
